# jlox-rs

./: .gitignore  Cargo.toml  README.md
docs/: examples.js  index.html  loxMonarchTokensProvider.js  micromodal.css  styles.css
docs/pkg/: jlox_rs_lib.d.ts  jlox_rs_lib.js  jlox_rs_lib_bg.js  jlox_rs_lib_bg.wasm  jlox_rs_lib_bg.wasm.d.ts  package.json
macros/: Cargo.toml
macros/src/: lib.rs
src/: ast.rs  environment.rs  interpreter.rs  lib.rs  lox.rs  main.rs  parser.rs  resolver.rs  scanner.rs  token.rs  types.rs
tests/: test_integration.rs  test_interpreter.rs
tests/programs/: binding.lox  callback_from_method.lox  class_method.lox  class_method_this.lox  constructor.lox  constructor_error.lox  constructor_returns_this.lox  constructor_returns_this_early.lox  counter.lox  fib.lox  getter.lox  inherit_methods.lox  lambda.lox  sayHi.lox  simple_class.lox  simple_method.lox  super.lox  unused_local.lox
