[package]
edition = "2021"
name = "jlox-rs"
version = "0.1.0"

[dependencies]
derivative = "2.2.0"
macros = {path = "./macros"}
paste = "1.0.8"
thiserror = "1.0.32"

[dev-dependencies]
assert_cmd = "2.0.4"

[[bin]]
name = "jlox_rs"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "jlox_rs_lib"
